# SteamRot

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
src/: CMakeLists.txt  main.cpp
src/Core/: Archetype.h
src/UIEngine/: CMakeLists.txt  UIEngine.cpp  UIEngine.h
src/assets/: AssetManager.cpp  AssetManager.h  CMakeLists.txt
src/components/: CGrimoireMachina.cpp  CGrimoireMachina.h  CMachinaForm.cpp  CMachinaForm.h  CMakeLists.txt  CMeta.cpp  CMeta.h  CShape.cpp  CShape.h  CText.cpp  CTransform.cpp  CUIState.cpp  CUIState.h  CUserInterface.cpp  CUserInterface.h  Component.cpp  Component.h  Fragment.h  Joint.h  containers.h
src/config/: CMakeLists.txt  directory_paths.cpp.in  directory_paths.h  steamrot_directory_paths.cpp.in  steamrot_directory_paths.h
src/context/: CMakeLists.txt  GameContext.cpp  GameContext.h
src/data/: CMakeLists.txt  DateTimeLogger.cpp  DateTimeLogger.h  EntityConfigData.cpp  EntityConfigData.h  Error.cpp  Error.h  TexturesPackage.cpp  TexturesPackage.h
src/data_handlers/: CMakeLists.txt  DataLoader.cpp  DataLoader.h  FlatbuffersDataLoader.cpp  FlatbuffersDataLoader.h  PathProvider.cpp.in  PathProvider.h
src/display/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h  Session.cpp  Session.h  Tile.cpp  Tile.h  tilelogic.cpp
src/entity/: Archetype.cpp  Archetype.h  ArchetypeHelpers.h  ArchetypeManager.cpp  ArchetypeManager.h  CMakeLists.txt  ComponentCollections.h  Entity.cpp  EntityConfigurationFactory.cpp  EntityConfigurationFactory.h  EntityConfigurator.cpp  EntityConfigurator.h  EntityHelpers.cpp  EntityHelpers.h  EntityManager.cpp  EntityManager.h  EntityMemoryPool.cpp  EntityMemoryPool.h  FlatbuffersConfigurator.cpp  FlatbuffersConfigurator.h  emp_helpers.cpp  emp_helpers.h
src/events/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  EventPacket.h  EventTypes.h  Subscriber.cpp  Subscriber.h  SubscriberFactory.cpp  SubscriberFactory.h  UserInputBitset.h  event_helpers.cpp  event_helpers.h
src/flatbuffers_headers/: CMakeLists.txt  actions.fbs  actions_generated.h  assets.fbs  assets_generated.h  convert_json_to_binary.cmake  entities.fbs  entities_generated.h  event_packet_data.fbs  event_packet_data_generated.h  events.fbs  events_generated.h  fragments.fbs  fragments_generated.h  game_engine.fbs  game_engine_generated.h  generate_flatbuffers_headers.cmake  grimoire_machina.fbs  grimoire_machina_generated.h  joints.fbs  joints_generated.h  logics.fbs  logics_generated.h  scene_change_packet.fbs  scene_change_packet_generated.h  scene_manager.fbs  scene_manager_generated.h  scene_types.fbs  scene_types_generated.h  scenes.fbs  scenes_generated.h  subscriber_config.fbs  subscriber_config_generated.h  themes.fbs  themes_generated.h  types.fbs  types_generated.h  ui_state.fbs  ui_state_generated.h  ui_style.fbs  (+5 more)
src/logger/: CMakeLists.txt  FailInfo.h  Logger.cpp  Logger.h  log_handler.cpp  log_handler.h
src/logic/: BaseLogic.cpp  BaseLogic.h  CMakeLists.txt  CraftingRenderLogic.cpp  CraftingRenderLogic.h  Logic.cpp  Logic.h  LogicContext.h  LogicFactory.cpp  LogicFactory.h  UIActionLogic.cpp  UIActionLogic.h  UICollisionLogic.cpp  UICollisionLogic.h  UIEventLogic.cpp  UIEventLogic.h  UIRenderLogic.cpp  UIRenderLogic.h  UIStateLogic.cpp  UIStateLogic.h  collision.cpp  collision.h  draw_ui_elements.cpp  draw_ui_elements.h  entity_helpers.cpp  entity_helpers.h  ui_helpers.cpp  ui_helpers.h
src/scenes/: CMakeLists.txt  CraftingScene.cpp  CraftingScene.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  SceneInfoProvider.h  SceneManager.cpp  SceneManager.h  TextureProvider.h  TitleScene.cpp  TitleScene.h
src/systems/: Action.cpp  ActionManager.cpp  ActionManager.h  AssetManager.cpp  AssetManager.h  CMakeLists.txt  CraftingScene.cpp  CraftingScene.h  DataLogger.cpp  EventHandler.cpp  EventHandler.h  GameEngine.cpp  GameEngine.h  Logic.cpp  Logic.h  LogicFactory.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneFactory.cpp  SceneFactory.h  SceneMainMenu.cpp  SceneManager.cpp  SceneManager.h  SceneMenu.cpp  SceneMenu.h  SceneType.h  TitleScene.cpp  TitleScene.h  TitleScreen.h  actions.h  event_helpers.cpp  event_helpers.h
src/user_interface/: Button.h  ButtonElement.h  CMakeLists.txt  DropDown.h  DropDownButtonElement.h  DropDownContainerElement.h  DropDownElement.h  DropDownItemElement.h  DropDownListElement.h  Panel.h  PanelElement.h  UIElement.cpp  UIElement.h  UIElementFactory.cpp  UIElementFactory.h  draw_ui_elements.cpp  draw_ui_elements.h
src/utility/: CMakeLists.txt  DataManager.cpp  DataManager.h  SchemaChecker.cpp  SchemaChecker.h  error_handler.h
src/utils/: CMakeLists.txt  general_util.h
steamrot/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  tests.cpp
tests/assets/: AssetManager.test.cpp  CMakeLists.txt  asset_helpers.cpp  asset_helpers.h
tests/components/: CGrimoireMachina.test.cpp  CMakeLists.txt  CUIState.test.cpp
tests/config/: CMakeLists.txt  steamrot_directory_paths.test.cpp.in  steamrot_test_directory_paths.test.cpp.in
tests/context/: CMakeLists.txt  TestContext.cpp  TestContext.h
tests/data_handlers/: CMakeLists.txt  FlatbuffersDataLoader.test.cpp  FlatbuffersDataLoader.test.cpp.in  PathProvider.test.cpp.in
tests/display/: CMakeLists.txt  DisplayManager.test.cpp
tests/entity/: Archetype.test.cpp  ArchetypeManager.test.cpp  Archetypemanager.test.cpp  CMakeLists.txt  EntityConfigurationFactory.test.cpp  EntityManager.test.cpp  EntityMemoryPool.test.cpp  FlatbuffersConfigurator.test.cpp  configuration_helpers.cpp  configuration_helpers.h  emp_helpers.test.cpp
tests/events/: CMakeLists.txt  EventHandler.test.cpp  Subscriber.test.cpp  SubscriberFactory.test.cpp  UserInputBitset.test.cpp  mock_fb_event_packet_data.h  mock_fb_subscriber_data.h
tests/include/: SceneTest.h  TestScene.h
tests/integration/: CMakeLists.txt
tests/logic/: CMakeLists.txt  LogicFactory.test.cpp  UIActionLogic.test.cpp  UICollisionLogic.test.cpp  UIRenderLogic.test.cpp  UIStateLogic.test.cpp  collision.test.cpp  draw_ui_elements.test.cpp  draw_ui_elements_helpers.cpp  (+5 more)
(+197 files in other folders)
