# order of subdirectories is important

add_subdirectory(config)
add_subdirectory(components)
add_subdirectory(display)
add_subdirectory(entity)
add_subdirectory(systems)
add_subdirectory(utility)
add_subdirectory(logger)
add_subdirectory(data)
add_subdirectory(logic)
add_subdirectory(user_interface)
add_subdirectory(flatbuffers_headers)
add_subdirectory(context)
