add_subdirectory(config)
add_subdirectory(assets)
add_subdirectory(components)
add_subdirectory(display)
add_subdirectory(entity)
add_subdirectory(events)
add_subdirectory(scenes)
add_subdirectory(systems)
add_subdirectory(logger)
add_subdirectory(data_handlers)
add_subdirectory(logic)
add_subdirectory(user_interface)
add_subdirectory(flatbuffers_headers)
add_subdirectory(context)
