include(CTest)
include(Catch)

add_subdirectory(assets)
add_subdirectory(context)
add_subdirectory(data_handlers)
add_subdirectory(display)
add_subdirectory(components)
add_subdirectory(entity)
add_subdirectory(events)
add_subdirectory(scenes)
add_subdirectory(systems)
add_subdirectory(logic)
add_subdirectory(user_interface)
add_subdirectory(integration)
